<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gankmobile.android.fastplan.ChangePlanActivity">

    <TextView
        android:text="@string/change_plan_title"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/write_data_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/TextAppearance.AppCompat.Large.Year"/>
    <TimePicker
        android:layout_width="215dp"
        android:layout_height="300dp"
        android:id="@+id/time_picker_2"
        android:layout_gravity="center"
        android:timePickerMode="clock" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
     <Button
         android:layout_width="0dp"
         android:layout_weight="0.5"
         android:layout_height="wrap_content"
         android:id="@+id/remove_plans_button"
         android:text="@string/remove_plan_button_label" />
     <Button
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:id="@+id/change_plans_button"
        android:text="@string/change_plan_button_label" />
    </LinearLayout>

</LinearLayout>
