<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PlanActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_is_message"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.175"
            android:layout_height="wrap_content"
            android:id="@+id/date_day"
            android:paddingLeft="18dp"
            android:layout_gravity="center"
            style="@style/TextAppearance.AppCompat.Large.Day" />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.175"
            android:layout_height="wrap_content"
            android:id="@+id/line1"
            android:layout_gravity="center" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:paddingLeft="7dp"
            android:id="@+id/date_month"
            android:layout_gravity="center"
            style="@style/TextAppearance.AppCompat.Large.Month"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.175"
            android:layout_height="wrap_content"
            android:id="@+id/line2"
            android:layout_gravity="center" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.175"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/date_year"
            style="@style/TextAppearance.AppCompat.Large.Year"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time_label"
        android:layout_marginTop="10dp"
        style="@style/TextAppearance.AppCompat.Large.Time"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interested_button_label"
        android:id="@+id/interested_button"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="120dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_plans_button"
        android:text="@string/change_plan_button_label"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:id="@+id/people_interested_label"
        style="@style/TextAppearance.AppCompat.Large.Time"/>

</LinearLayout>
